--- a/Recipe_style.css
+++ b/Recipe_style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #34f434;
+    background-color: lightblue;
 }
 
 h1 {
@@ -11,7 +11,7 @@ h1 {
 }
 
 h2 {
-    color: lightblue;
+    color: #34f434;
     font-size: 16
  }
 
